diss: luck polishing with uml graphs

--- a/bib/eigene.bib
+++ b/bib/eigene.bib
@@ -169,3 +169,11 @@
     longeditor    = "Frank P. A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
     editor    = "Frank Coolen and Matthias Troffaes and Thomas Augustin and Gert de Cooman",
 }
+
+@misc{luck-package,
+  title={\texttt{\upshape luck}: \textbf{R} package for Generalized iLUCK-models},
+  author={Gero Walter and Norbert Krautenbacher},
+  year={2013},
+  url={http://luck.r-forge.r-project.org/},
+}
+
