--- a/diss.tex
+++ b/diss.tex
@@ -15,6 +15,7 @@
 
 %\includeonly{setsofconjugatepriors,alternatives} %
 %\includeonly{appendix2}
+%\includeonly{luck}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%  Beginn des Dokuments  %%
