--- a/head.tex
+++ b/head.tex
@@ -34,7 +34,7 @@
 \usepackage{multirow}
 
 \usepackage{tikz}
-\usetikzlibrary{calc,decorations.pathreplacing,shapes,positioning,arrows}
+\usetikzlibrary{calc,decorations.pathreplacing,shapes,positioning,arrows,shadows}
 
 \usepackage[bookmarks]{hyperref}
 
