--- a/intro.tex
+++ b/intro.tex
@@ -210,7 +210,7 @@ instead of $n^{(1)}$ and $y^{(1)}$, respectively).
 %
 Section~\ref{sec:luck} gives a short overview on a software implementation
 of the model presented in Section~\ref{sec:jstp}.
-Author and maintainer of this add-on package \texttt{luck}***citation*** is Gero Walter,
+Author and maintainer of this add-on package \texttt{luck} \parencite{luck-package} is Gero Walter,
 with Norbert Krautenbacher as a second author, who contributed code for an application
 to exponentially distributed data.
 %
