--- a/setsofconjugatepriors.tex
+++ b/setsofconjugatepriors.tex
@@ -20,7 +20,7 @@ and illustrates some characteristic modelling opportunities of generalised Bayes
 Section~\ref{sec:alternatives} briefly discusses some alternative models based on sets of priors.
 Section~\ref{sec:jstp} then presents one model in detail, namely the so-called
 \nymodel\ developed in \textcite{Walter2009a},
-and illustrates its application to the Normal-Normal and Dirichlet-Multinomial models. % in more detail. %***JSTP***
+and illustrates its application to the Normal-Normal and Dirichlet-Multinomial models. % in more detail. 
 Section~\ref{sec:luck} gives a short overview on a software implementation of \nymodel s,
 the add-on package \texttt{luck} ***citation*** for the statistical programming environment \textbf{R} \parencite{2013:r}.
 Finally,
@@ -28,9 +28,8 @@ Section~\ref{sec:isipta11} presents two attempts to further refine inference beh
 While the first approach considers more sophisticated shapes for prior parameter sets,
 the second is a fundamentally different approach that combining inferences from two arbitrary distinct models.
 Interestingly, the inferences from these two approaches in Section~\ref{sec:isipta11} show nevertheless fascinating similarities.
-%***ISIPTA'11***
 
-%***football example?***
+%football example?
 
 \newpage
 
@@ -38,7 +37,7 @@ Interestingly, the inferences from these two approaches in Section~\ref{sec:isip
 %\section{The General Model}
 \label{sec:generalmodel}
 
-%***structure of section: here comes the important part!****
+%***structure of section: here comes the important part!
 
 This section gives a systematic overview on imprecise probability models
 for inference in canonical exponential families
