--- a/concluding.tex
+++ b/concluding.tex
@@ -6,13 +6,13 @@ in Sections~\ref{sec:concluding-summary} and \ref{sec:concluding-discussion}, re
 In Section~\ref{sec:concluding-outlook}, we will sketch some opportunities for applications and avenues for further research.
 
 
-\section{Summary***}
+\section{Summary}
 \label{sec:concluding-summary}
 
 % SUMMARY
 %\subsection{Summary of Contents}
 
-After a detailed motivational example and application in Section~\ref{sec:commoncause},
+After a detailed motivating example and application in Section~\ref{sec:commoncause},
 we presented some theoretical foundations of imprecise or interval probability in Section~\ref{cha:gbi},
 with a focus on the approaches leading the way towards a generalisation of Bayesian inference.
 There, we also gave some general motives for using imprecise probability methods,
@@ -27,10 +27,16 @@ and the issue of \emph{prior-data conflict} (Section~\ref{sec:motivation:pdc}),
 where strong prior beliefs are in conflict with trusted data,
 but data is too sparse to overrule prior beliefs.
 
-After a short view on some approaches in alternative to imprecise probability in Section~\ref{sec:ip-alternatives},
-we discussed a general framework for imprecise Bayesian inference
-based on sets of conjugate priors in Section~\ref{sec:generalmodel},
-this framework serving as a bracket and reference point for most of the models investigated in this thesis.
+After a short view on some approaches understanding themselves as alternative to imprecise probability in Section~\ref{sec:ip-alternatives},
+we proposed a general framework for imprecise Bayesian inference
+based on sets of conjugate priors in Section~\ref{sec:generalmodel},% %this framework
+\footnote{Based on the parametrisation of canonically constructed conjugate priors described in Section~\ref{sec:regularconjugates},
+where a prior is identified through a strength parameter $\nz$ and a main parameter $\yz$,
+the framework considers sets of priors $\MZ$ induced by sets of parameters $\PZ$, which consist of pairs $(\nz,\yz)$.
+The set of posteriors $\MN$, obtained by updating each distribution in the set of priors $\MZ$,
+can then be conveniently described through the set of posterior parameters $\PN$,
+consisting of pairs of updated parameters $(\nn,\yn)$.}
+serving as a bracket and reference point for most of the models investigated in this thesis.
 %a number of contributions discussed in this thesis.
 %the framework serving as a bracket for the remainder of the topics discussed in the thesis.
 Some general results regarding inference properties of models
@@ -41,10 +47,10 @@ could subsequently be considered as modelling opportunities of generalised Bayes
 \begin{enumerate}[(i)]
 \item Imprecise Bayesian methods allow to model weak prior information
 more adequately than the so-called non-informative priors usually employed 
-(see item~\ref{enum:noninformative} on page~\pageref{enum:noninformative}, and Section~\ref{sec:idm-and-near-ignorance}).
-\item As a common class of Bayesian inference procedures
+(see item~\ref{enum:noninformative}.\ on page~\pageref{enum:noninformative}, and Section~\ref{sec:idm-and-near-ignorance}).
+\item As we find that a common class of Bayesian inference procedures
 (those based on the canonical conjugates described in Section~\ref{sec:regularconjugates})
-in our view deals with \pdc\ in an unfavourable way %this issue of sensitivity to the prior
+provides insuffients inferences in case of \pdc\ %this issue of sensitivity to the prior
 (see Section~\ref{sec:iid} for some basic examples, and
 Section~\ref{sec:scp} and \ref{sec:cccp} for the case of Bayesian linear regression),
 we developed imprecise probability methods that overcome this deficiency,
@@ -55,12 +61,12 @@ entails larger posterior parameter sets $\PN$,
 leading to cautious inferences if, and only if, caution is needed.
 \end{enumerate}
 
-Section~\ref{sec:alternatives} described some alternative models based on sets of priors,
+Section~\ref{sec:alternatives} considered some alternative models based on sets of priors,
 and discussed their inference properties in comparison to the results in Section~\ref{sec:generalmodel}.
 Section~\ref{sec:jstp} then motivated, developed, and illustrated
 a central model type from Section~\ref{sec:generalmodel} in more detail;
 afterwards, Section~\ref{sec:luck} briefly described a software implementation
-of the model framework developed in Section~\ref{sec:jstp}.
+of this model framework. %developed in Section~\ref{sec:jstp}.
 
 Finally, Section~\ref{sec:isipta11} presented attempts to further refine
 inference behaviour in the presence of prior-data conflict.
@@ -86,7 +92,7 @@ described informally in Section~\ref{sec:concluding-outlook} below
 
 
 %DISCUSSION
-\section{Discussion***}
+\section{Discussion}
 \label{sec:concluding-discussion}
 
 %discussion of issues in Bayesian inference and discussion on IP methods given in Section~\ref{sec:motivation} %Chapter~\ref{cha:gbi}.
@@ -94,7 +100,7 @@ described informally in Section~\ref{sec:concluding-outlook} below
 %****issues in Bayesian inference: weakly informative priors, \pdc, or in general sensitivity to the prior
 %****realistic modeling of partial information
 
-As the model overview in Section~\ref{sec:generalmodel} gives already a good discussion
+As the model overview in Section~\ref{sec:generalmodel} gives already a detailed discussion
 of the imprecise probability models considered in this thesis,%
 \footnote{General motives for the use of imprecise probability models
 were discussed in Section~\ref{sec:motivation},
@@ -103,7 +109,7 @@ These motives can be subsumed as follows:
 Generalised Bayesian models allow, in contrast to classical Bayesian models,
 a realistic modeling of partial prior information,
 and can account for model uncertainty in a preferable way.
-Critique on and possible alternatives to Generalised Bayesian inference models
+Critique on, and possible alternatives to, Generalised Bayesian inference models
 were discussed in Section~\ref{sec:ip-alternatives},
 while alternatives to the models covered in Section~\ref{sec:generalmodel} are discussed in Section~\ref{sec:alternatives}.}
 we will try to emphasize some central points here only.
@@ -111,13 +117,13 @@ we will try to emphasize some central points here only.
 
 The inference properties described in Section~\ref{sec:gbicp-properties-criteria}
 for the generalised Bayesian model framework established in Section~\ref{sec:basicsetting}
-are quite remarkable in their generality,***
+are quite remarkable in their generality,
 and illustrate the ability of imprecise probability models to realistically model partial information
 %in a variety of situations.
 for a wide field of inference tasks.
 In these models, ambiguity in prior specifications influences ambiguity in posterior inferences
 in a natural and comprehensible way.%
-\footnote{In contrast, as mentioned in Section~\ref{sec:alternatives:other}***,
+\footnote{In contrast, as mentioned in Section~\ref{sec:alternatives:whitcomb},
 in imprecise probability models for discrete parameter spaces,
 it is for example difficult to judge the weight of a certain prior model as compared to the data.}
 %write again about general model framework (Section~\ref{sec:generalmodel}),
@@ -129,8 +135,10 @@ we concluded that the shape of the prior parameter set $\PZ$
 crucially influences model behaviour, 
 and noted at the end of Section~\ref{sec:pdc-sensitivity} that
 there is a clear trade-off between easy handling of $\PZ$ or $\PN$, and the desired model property.
-Models with fixed $\nz$, like the IDM under prior information and the model by \textcite{2005:quaeghebeurcooman},
-are very easy to handle, with $\nz$, $\yzl$ and $\yzu$ as the only parameters to elicit,
+Models with fixed prior strength parameter $\nz$,
+like the IDM under prior information and the model by \textcite{2005:quaeghebeurcooman},
+are very easy to handle,
+with $\nz$, the lower ($\yzl$) and upper ($\yzu$) bound of the prior main parameter as the only parameters to elicit,
 and $\PN$ being characterised again by the three values $\nn$, $\ynl$ and $\ynu$.%
 \footnote{For sake of a clarity,
 we consider only one-dimensional main parameters $\yz$ in the discussion here and below,
@@ -147,7 +155,7 @@ where the range of $\yz$ values depends on $\nz$
 via the contour functions $\yzl(\nz)$ and $\yzu(\nz)$
 (see Section~\ref{sec:othershapes}).
 
-Revisiting and continuing*** the discussion of parameter set shapes in Section~\ref{sec:ibbm-resume},
+Revisiting and continuing the discussion of parameter set shapes in Section~\ref{sec:ibbm-resume},
 the general framework in principle allows arbitrary shapes for the prior parameter set $\PZ$.
 However, freely elicting this set shape
 (e.g., by allowing for arbitrary contour functions $\yzl(\nz)$ and $\yzu(\nz)$)
@@ -181,7 +189,7 @@ and the model behaviour resulting from it is relatively clear.
 it is possible to construct conjugate priors as needed for the problem at hand,
 often resulting in closed form solutions for many quantities of interest.
 \item Nevertheless, they give reasonable and sophisticated inferences:
-as discussed above, uncertainty is adequately mirrored by the size of $\MN$,
+as discussed above, uncertainty is adequately mirrored by the size of the set of posteriors $\MN$,
 fulfilling the inference properties \ref{enum:n0vsn}.--\ref{enum:deltay}.
 %criteria from Section~\ref{sec:gbicp-properties-criteria},
 with the potential to implement \pdc\ sensitivity or near-noninformativeness,
@@ -193,7 +201,7 @@ As noted in Section~\ref{sec:alternatives:drc}, the magnitude of $\mathcal{M}_{l
 does not decrease with $n$ in density ratio class models that are updated according to the Generalised Bayes' Rule.}
 \item They allow for flexible modelling, as
 it is possible to choose or tweak the prior set shape according to inference needs,
-where, however, the trade-off mentioned above should be ***factored in. %kept in mind***.
+where, however, the trade-off mentioned above should be taken into account.
 Specifically, we think the model presented in Section~\ref{sec:4-gw-071216}
 (with $\PZ = [\nzl, \nzu] \times [\yzl, \yzu]$)%
 \footnote{This kind of prior set shape was also employed in the motivational example
@@ -206,7 +214,7 @@ constitutes a sensible compromise between model complexity and inference propert
 \end{itemize}
 
 % rectangle ``somewhat peculiar'' from a behavioral point of view (Section~\ref{sec:resume}).
-However, some doubts with respect to the rectangular shape of $\PZ$ are nevertheless warranted.
+However, some doubts with respect to the rectangular shape of $\PZ$ are nevertheless permitted.
 From a strictly behavioral point of view
 (e.g., if $\MZ$ should express an expert's prior beliefs),
 taking $\PZ = [\nzl, \nzu] \times [\yzl, \yzu]$,
@@ -228,12 +236,12 @@ would be offset by the `head start' of $\yzu(\nzu)$.
 As the upper bound for $\yn$ is attained at $\ynu(\nnu)$
 if $\ttau(\x) < \yzu(\nzu)$ (i.e., data is in agreement with the prior assignements),
 the effect of extra imprecision would only appear as soon as
-$\ynu(\nnl)$ `overtakes' $\ynu(\nnu)$ in the move towards $\ttau(\x)$, i.e. $\ynu(\nnl) > \ynu(\nnu)$.}
+$\ynu(\nnl)$ `overtakes' $\ynu(\nnu)$ in the move towards $\ttau(\x)$, i.e., when $\ynu(\nnl) > \ynu(\nnu)$.}
 
 However, it seems equally reasonable to choose %$\yzu(\nzl) > \yzu(\nzu)$,
 a shorter interval for $\yz$ at $\nzu$ than at $\nzl$,
 by the considerations described at the beginning of Section~\ref{sec:othershapes},
-involving a thought experiment or `pre-posterior thinking':
+involving a thought experiment, or `pre-posterior thinking':
 %***anteater****
 If we designate bounds for $\yn$ constant in $\nn$ and a range of $\nn$ values
 %where the corresponding posterior parameter set $\PN$
@@ -255,21 +263,21 @@ $|\nz \cdot \yz|$ to be constant.
 Such a shape was proposed by \textcite{2012:benavolizaffalon}
 for canonical priors to one-parameter exponential family likelihoods,
 with the aim to generate near-noninformative prior sets $\MZ$.}
-
-A suggestion for another more sophisticated shape of $\PZ$,
+%
+(A suggestion for another more sophisticated shape of $\PZ$,
 with the aim to allow for extra precision if prior and data coincide especially well,
-is discussed in the outlook below.
+is discussed in the outlook below.)
 %***short note on eggplant shapes in talk? (preliminary results)
 
 % study by krautenbacher shows that elicitation of $\PZ$ can be difficult,
 % compares with \textcite{2005:whitcomb}, similar results, see Section~\ref{sec:alternatives}
 % should be cautious with skewed distributions, as expectation interval may be misleading (look at HD intervals, too!)
 % remember that the canonical conjugate may not behave as expected
-However, the favourable properties given in general terms in Section~\ref{sec:generalmodel}***
+However, the favourable properties given in general terms in Section~\ref{sec:generalmodel}
 should not obscure the restrictions that are imposed by the canonical conjugate priors
 the framework is based on. 
 
-The study by \textcite[see the discussion in Section~\ref{sec:alternatives:other}***]{2011:krautenbacher}
+The study by \textcite[see the discussion in Section~\ref{sec:alternatives:whitcomb}]{2011:krautenbacher}
 reminds us that fitting a prior parameter set $\PZ$
 to available prior information can be non-trivial,
 and that also the generally well-understood conjugate distributions may exhibit
@@ -284,10 +292,10 @@ or even completely overcome,
 when choosing $\MZ$ not to contain parametric distributions only,
 but to comprise all finite mixtures of parametric distributions,
 i.e., considering $\MZ$ as the convex hull of the parametric distributions.%
-\footnote{As noted in footnote~\ref{foot:denseinthespaceof}***, page~\pageref{foot:denseinthespaceof}***,
+\footnote{As noted in footnote~\ref{foot:denseinthespaceof}, p.~\pageref{foot:denseinthespaceof},
 if the parametric distributions are normal distributions and $\PZ$ is large enough,
 it can be assumed that $\MZ$ contains a very wide range of priors,
-as mixtures of normal distributions are dense in the space of well-behaved probability distributions.***}
+as mixtures of normal distributions are dense in the space of well-behaved probability distributions.}
 However, as mentioned in Section~\ref{sec:basicsetting},
 then only inferences that are linear in the parametric posteriors are easy to obtain,
 and the model may deliver very imprecise, or even vacuous, results
@@ -298,15 +306,15 @@ the model framework most similar to this variant of the model framework of Secti
 (similar in that they both allow non-parametric priors in the set of prior distributions,
 although the model is generated by use of parametric distributions),
 do not have this issue of tractability of nonlinear inferences
-(see the discussion of the model by \textcite[\S 4]{2011:rinderknecht} in Section~\ref{sec:alternatives:other}***);
+(see the discussion of the model by \textcite[\S 4]{2011:rinderknecht:diss} in Section~\ref{sec:alternatives:rinderknecht});
 while this seems a major strength of the model,
 it is in our view offset by a fundamental weakness,
 the lack of a clear mechanism by which imprecision in coherent posterior inferences
 can be modelled in dependence of sample size.%
-\footnote{As mentioned in Sections~\ref{sec:alternatives:drc} and \ref{sec:alternatives:other},
+\footnote{As mentioned in Sections~\ref{sec:alternatives:drc} and \ref{sec:alternatives:rinderknecht},
 imprecision as measured by the magnitude of $\mathcal{M}_{l,u}$ is the same for any sample size $n$
 if $\mathcal{M}_{l,u}$ is updated according to Bayes' Rule.
-Only if the requirement of coherence, the fundation of the Generalised Bayes' Rule, is dropped,
+Only if the requirement of coherence, the foundation of the Generalised Bayes' Rule, is dropped,
 density ratio class models are possible that allow for imprecision to depend on sample size $n$.
 See also footnote~\ref{foot:coolenplusrinderknecht} on page~\pageref{foot:coolenplusrinderknecht},
 where we suggested a model based on a combination of ideas from \textcite{1993:coolen} and \textcite{2011:rinderknecht:diss}.}
@@ -319,7 +327,7 @@ but it is actually valid for the general case of updating
 in imprecise probability models based on canonical conjugate priors:
 On the one hand, $\nz$ governs the weighting of prior information $\yz$ with
 respect to the data $\ttau(\x)$;
-the larger $\nz$, the more the values of $\ynl$ and $\ynu$ are dominated by $\yzl$ and $\yzu$.
+the larger $\nz$, the more the values of $\ynl$ and $\ynu$ are dominated by $\yzl$ and $\yzu$, respectively.
 On the other hand, $\nz$ governs also the degree of posterior imprecision:
 the larger $\nz$, the larger c.p.\ ${\rm MPI}\un = \ynu - \ynl$.
 A larger $\nz$ thus leads to more imprecise posterior inferences,
@@ -331,12 +339,12 @@ In Section~\ref{sec:weightedinf},
 an approach separating these two roles of $\nz$ was developed,
 by considering two separate models,
 an uninformative and an informative model,%
-\footnote{These two models could also be denoted by `cautious' and `bold', respectively,
-the cautious model trying to use only a minimal amount of information, %presuppose at least as possible**,
-whith the bold model going for more daring assumptions.}
+\footnote{These two models could also be denoted by `cautious' and `bold', respectively.
+While the cautious model tries to use only a minimal amount of information, %presuppose at least as possible**,
+the bold model goes for more daring assumptions.}
 with individual levels of precision induced by different choices of $\nz$. 
-Inference intervals based on these two models were then combined into a definite*** inference interval
-using an imprecise weight.
+Inference intervals based on these two models are then combined %into a definite*** inference interval
+using an imprecise weight, forming the actual inference interval.
 
 This model of \emph{weighted inference} is a very general approach,
 being applicable for a wide variety of inference tasks and accomodating all sorts of models that provide interval-valued inferences.
@@ -345,7 +353,7 @@ for the inference situation discussed in Section~\ref{sec:isipta11}
 with feasible elicitation and handling (see Section~\ref{wi-prop}),
 it is an approach going beyond the model framework of Section~\ref{sec:basicsetting},
 and thus the general properties described in Section~\ref{sec:gbicp-properties-criteria}
-do not necessarily hold.***
+do not necessarily hold.
 
 \medskip
 
@@ -361,7 +369,7 @@ enable us to avoid heroic model assumptions, and the spuriously precise inferenc
 We also think that there is still further potential to models based on sets of conjugate priors.
 As described in the Outlook below,
 further advances are within reach 
-that, in addition to the properties \ref{enum:n0vsn}.--\ref{enum:deltay}. and \pdc\ sensitivity
+that, in addition to the properties \ref{enum:n0vsn}.--\ref{enum:deltay}.\ and \pdc\ sensitivity
 (see Section~\ref{sec:gbicp-properties-criteria}),
 allow for more precise posterior inferences when prior and data coincide especially well.%
 \footnote{We already mentioned this this modelling goal in Section~\ref{sec:insights},
@@ -370,7 +378,7 @@ where we spoke of \emph{strong prior-data agreement}.}
 
 
 
-\section{Outlook***}
+\section{Outlook}
 \label{sec:concluding-outlook}
 
 %***avenues for further research***
@@ -383,13 +391,13 @@ In particular, an idea for modelling of \emph{strong prior-data agreement} will 
 
 We will subsume our ideas for further research and developments in three steps:
 First, we will consider some potential applications and areas of study for the
-currently existing models in the framework from Section~\ref{sec:generalmodel}.
+currently existing models in the framework from Section~\ref{sec:basicsetting}.
 Then, we will sketch some ideas to extend the presently available models,
 including a discussion of a novel parameter set shape that allows to cater for
-\emph{strong prior-data agreement} (see the technical details in Section~\ref{sec:boatshape}***).
+\emph{strong prior-data agreement} (see the technical details in Section~\ref{sec:boatshape}).
 These further developments still follow the lines %are **still a part of the framework***
 of generalised Bayesian inference using sets of priors as described in Sections~\ref{sec:gbr} and \ref{sec:imprecisebayes}
-that guarantees coherence of inferences by updating the set of priors via the Generalised Bayes' Rule.
+that ensure coherence of inferences by updating the set of priors via the Generalised Bayes' Rule.
 In the last part of this outlook, we will look instead beyond this framework
 of coherent Bayesian inference, by discussing some general thoughts
 about updating and learning in the context of statistical inference.
@@ -410,7 +418,7 @@ by giving more detailed insight into strengths and weaknesses of the respective 
 %***more studies for comparisons with the model from \ref{sec:generalmodel} to be done,
 %e.g., with hierarchical models (Section~\ref{sec:hierarchical})?***
 Further insight could also be gained from a comparison to the hierarchical model
-developed by \textcite{2008:cattaneo} (see Section~\ref{sec:hierarchical}).
+developed by \textcite[see Section~\ref{sec:hierarchical}]{2008:cattaneo}.
 
 There are of course many opportunities for application of the models described in this thesis,
 and we will mention just two interesting general cases here.
@@ -420,7 +428,7 @@ The canonical conjugate prior for Bayesian linear regression constructed in Sect
 could be used for an imprecise regression analysis based on sets of priors.
 Although being probably the most important concept in modern statistical inference,
 in the imprecise probability literature,
-so far only very few contributions*** considering regression analysis have been published.%
+so far only very few contributions considering regression analysis have been published.%
 \footnote{Among the few exceptions are \textcite{Walter2007a}, \textcite{2010:utkin},
 \textcite{2011:utkin}, \textcite{2012:cattaneo-wiencierz}, and \textcite{2013:utkin-wiencierz}.}
 Work in this direction could contribute to a major step towards a wider application
@@ -458,7 +466,8 @@ but also other set shapes could prove useful here.
 Now, we will present some ideas for further development within the framework
 described in Section~\ref{sec:basicsetting}, i.e.,
 for models based on sets of canonical conjugate priors
-that are updated via the Generalised Bayes' Rule.
+that are updated via the Generalised Bayes' Rule;
+afterwards, we will also consider some potential approaches outside this framework.
 
 As a first important development,
 the models discussed in this thesis rely on a precise sampling model,
@@ -521,7 +530,7 @@ i.e., the weighted average update step for $\yz$, and the increment step for $\n
 seems very intuitive (and is central to the behaviour of the model,
 see the list of inference properties in Section~\ref{sec:gbicp-properties-criteria}),
 the shape change of $\PZ$ to $\PN$ through this update step,
-and its effects on posterior inferences, are difficult to grasp.
+and its effects on posterior inferences, is difficult to grasp.
 This is due to the fact that,
 while the update of a single coordinate $(\nz,\yz)$ is a simple shift,
 this shift is different for each of the coordinates in a set;
@@ -542,9 +551,9 @@ could be expressed as a shift of the entire set within the parameter space.
 %yes, there is, see preliminary results by Mik Bickis (``personal communication'' if no citable work?).
 In fact, such a parametrisation has been developed by Mi\c{k}elis Bickis (\cite*{2011:bickis:geomip}, personal communication),
 and he is currently preparing a manuscript elaborating the details of his findings.
-In this parametrisation, a canonical prior is represented by a coordinate $(\eta_0,\eta_1)$,
-where $\eta_1$ replaces the main prior parameter $\yz$,
-while $\eta_0$ is just a different name for $\nz$.%
+In this parametrisation, a canonical prior is represented by a coordinate $(\ezz,\eoz)$,
+where $\eoz$ replaces the main prior parameter $\yz$,
+while $\ezz$ is just a different name for $\nz$.%
 %there, update step for $\nz$ is the same, and shift for parameter replacing $\yz$ is the same for all. 
 \footnote{This parametrisation is described in more detail in Section~\ref{sec:boatshape},
 along with some first technical results that confirm the desired properties for the novel shape suggested there.}
@@ -552,17 +561,17 @@ In the parametrisation from Section~\ref{sec:regularconjugates},
 $\yz$ had the convenient property of being equal to $\E\big[\E[\ttau(\x) \mid \psi] \mid \nz, \yz\big]$,
 giving the (prior) expectation, or a prior guess, for the mean sample statistic $\ttau(\x)$.
 %rays of constant expectation (i.e., $\approx \yn$)
-Naturally, $\eta_1$ cannot have this property,
+Naturally, $\eoz$ cannot have this property,
 but in the transformed space for the Beta-Binomial model, the points on rays emanating from the coordinate $(-2,0)$
 will give a constant expectation of $\E[\ttau(\x) \mid \psi]$,
-such that interpretation of parameter sets in terms of $(\eta_0,\eta_1)$ is still relatively easy.
+such that interpretation of parameter sets in terms of $(\ezz,\eoz)$ is still relatively easy.
 %As detailed in Section~\ref{sec:boatshape},
 With the set shape unchanged by the update, 
 tailoring shapes for desired inference behaviour is much easier in this representation.
 %because the \emph{shapes} remain constant.
 %GW and FC have thought of a shape that has \pdc\ sensitivity,
 Indeed, Frank Coolen and the author of this thesis have devised
-a set shape in %this parametrisation
+a set shape %in this parametrisation
 that allows for both \pdc\ sensitivity
 %and gives `bonus precision' if prior and data agree especially well,
 and more precise inferences in case of strong prior-data agreement,
@@ -611,13 +620,13 @@ We consider this, to some extent, to be the case for the critique that
 the Generalised Bayes' Rule is too inflexible when prior information is confronted with surprising data,
 as it insists on coherence of posterior inferences with prior assumptions that,
 in the light of the data, may turn out to be inadequate.
-The models discussed in Sections~\ref{sec:pdc-sensitivity} and \ref{sec:jstp}
+The models discussed in Sections~\ref{sec:pdc-sensitivity} and \ref{sec:4-gw-071216}
 mitigate this issue by allowing for \pdc\ sensitivity.
 The resulting posterior sets are still, in essence, a compromise between the prior set and the data,
 but mirror the conflict between them by increased imprecision.
-This increased imprecision can the serve as a `warning light',
+This increased imprecision can then serve as a `warning light',
 highlighting the doubts with regards to the posterior model in such a conflict,
-which may ultimatively motivate the analyst to reconsider prior assignments.
+which may ultimatively motivate the analyst to reconsider her prior assignments.
 
 Another critique based on the perceived inflexibility of the Generalised Bayes' Rule
 relates to posterior inferences being often `too imprecise'.
@@ -661,7 +670,7 @@ Another idea for models outside the generalised Bayesian framework
 related to the role of $\nz$ was discussed in Section~\ref{sec:insights},
 where we argued that a possible way to react to prior-data
 conflict could be to consider the combined information of prior and data
-to be of less value than either the real data themselves
+to be of less value than either the data themselves
 or than both information sources separately.
 When strong prior beliefs collide with contradicting data,
 this could lead to severe doubt about what is actually going on.
