--- a/summary.tex
+++ b/summary.tex
@@ -11,10 +11,10 @@ the subsumption of prior knowledge and the information in the data calculated vi
 
 The adequate choice of priors has always been an intensive matter of debate in the Bayesian literature.
 While a considerable part of the literature is concerned with so-called non-informative priors
-aiming to eliminate (or, so-to-say, standardise) the influence of priors on posterior inferences,
+aiming to eliminate (or, at least, to standardise) the influence of priors on posterior inferences,
 inclusion of specific prior information into the model may be necessary if data are scarce,
 or do not contain much information about the parameter(s) of interest;
-also, shrinking estimators, common in frequentist approaches, can be considered as Bayesian estimators based on informative priors.
+also, shrinkage estimators, common in frequentist approaches, can be considered as Bayesian estimators based on informative priors.
 
 When substantial information is used to elicit the prior distribution through, e.g, an expert's assessment,
 and the sample size is not large enough to eliminate the influence of the prior, \emph{prior-data conflict} can occur,
