--- a/versicherung.tex
+++ b/versicherung.tex
@@ -5,9 +5,9 @@
 \chapter*{Eidesstattliche Versicherung}
 
 Hiermit erkläre ich an Eides statt, dass diese Dissertation von mir
-selbstständig, unerlaubte Beihilfe angefertigt ist.\\[3ex]
+selbstständig und ohne unerlaubte Beihilfe angefertigt ist.\\[3ex]
 
-München, den ***Abgabedatum***\\[2ex]
+München, den 14.~August 2013\\[2ex]
 \hspace*{0.5\textwidth} {\small Gero Walter}
 
 
