--- a/zusammenfassung.tex
+++ b/zusammenfassung.tex
@@ -1,10 +1,71 @@
 \selectlanguage{ngerman}
 \chapter*{Zusammenfassung}
-\addcontentsline{toc}{chapter}{\protect ***Zusammenfassung}
+\addcontentsline{toc}{chapter}{\protect Zusammenfassung}
 
-***Hier steht eine maximal einseitige Zusammenfassung der
-Dissertation.
+Das Thema dieser Dissertation ist die Generalisierung der Bayes-Inferenz
+im Hinblick auf unscharfe oder intervallwertige Wahrscheinlichkeiten.
+Ein besonderer Fokus liegt dabei auf dem Modellverhalten
+wenn Priori-Verteilung und Daten in Konflikt stehen.
 
-Dies ist ein neuer Absatz.
+Die Bayes-Inferenz ist einer der Hauptansätze zur Herleitung von statistischen Inferenzmethoden.
+In diesem Ansatz muss (eventuell subjektives) Vorwissen über die Modellparameter,
+welches nicht von den Daten erfasst wird, in einer sogenannten Priori-Verteilung (kurz: Priori) erfasst werden.
+Alle Inferenzaussagen basieren dann auf der sogenannten Posteriori-Verteilung (kurz: Posteriori),
+die das Vorwissen und die Informationen in den Daten zusammenfasst
+und mittels des Satz' von Bayes berechnet wird.
+
+Wie eine Priori-Verteilung zu wählen sei, ist dabei stark umstritten.
+Ein großer Teil der Literatur*** befasst sich mit der Bestimmung von sogenannten
+nichtinformativen Prioris. Diese zielen darauf ab, den Einfluss der Priori auf die Posteriori
+zu eliminieren, oder zumindest zu standardisieren.
+Falls jedoch nur wenige Daten zur Verfügung stehen, oder diese nur wenige Informationen
+in Bezug auf die Modellparameter bereit stellen,
+kann es nötig sein, spezifische Priori-Informationen in ein Modell einzubeziehen.
+Außerdem können sogenannte Shrinkage-Schätzer, die in frequentistischen Ansätzen häufig zum Einsatz kommen,
+als Bayes-Schätzer mit informativen Prioris angesehen werden.
+
+Wenn spezifisches Vorwissen zur Bestimmung einer Priori genutzt wird (beispielsweise durch eine Befragung eines Experten),
+und aber die Stichprobengröße nicht ausreicht, um eine solche informative Priori zu überstimmen,
+kann ein sich Konflikt zwischen Priori und Daten ergeben.
+Dieser kann sich darin äußern, dass die beobachtete (und von eventuellen Ausreißern bereinigte)
+Stichprobe Parameterwerte impliziert, die aus Sicht der Priori äußerst überraschend und unerwartet sind.
+In solch einem Fall kann es unklar sein, ob eher das Vorwissen oder eher die Integrität***
+Datenerhebung in Zweifel gezogen werden sollen.
+(Ein bestimmtes Messverfahren könnte beispielsweise zu systematischen Verzerrungen führen.)
+Zweifellos sollte sich ein solcher Konflikt in der Posteriori widerspiegeln
+und eher vorsichtige Inferenzaussagen bedingen;
+die meisten Statistiker würden daher davon ausgehen,
+dass sich in solchen Fällen breitere Posteriori-Kredibilitätsintervalle für die Modellparameter ergeben.
+Bei Modellen, die auf konjugierten Prioris basieren,
+wird ein solcher Konflikt jedoch einfach ausgemittelt.
+Dann werden Inferenzaussagen, die auf einer solchen Posteriori basieren, den Anwender in falscher Sicherheit wiegen.
+
+In dieser problematischen Situation können Intervallwahrscheinlichkeits-Methoden einen
+fundierten Ausweg bieten, indem Unsicherheit über die Modellparameter mittels
+\emph{Mengen} von Prioris beziehungsweise Posterioris ausgedrückt wird.
+Neuere Erkenntnisse aus Risikoforschung, Ökonometrie und der Forschung zu künstlicher Intelligenz,
+die eine mehrdimensionale Auffassung von Unsicherheit bestätigen / nahelegen***,
+unterstützen einen solchen Modellansatz,
+der auf der Feststellung aufbaut, dass die auf den
+auf den Theorien*** von Kolmogorov oder de Finetti basierende
+übliche Wahrscheinlichkeitsrechung zu restriktiv ist,
+um diesen mehrdimensionalen Charakter adäquat einzubeziehen,
+und sich stattdessen nur auf eine der Dimensionen beziehen kann,
+nämlich die der idealen Stochastizität.
+
+In dieser Dissertation wird untersucht, wie sich Mengen von Prioris
+für Stichproben aus Exponentialfamilien effizient beschreiben lassen.
+Wir entwickeln Modelle, die eine ausreichende Flexibilität gewährleisten,
+so dass eine Vielfalt von Ausprägungen von partiellem Vorwissen beschrieben werden kann.
+Diese Modelle führen zu vorsichtigen Inferenzaussagen,
+wenn ein Konflikt zwischen Priori und Daten besteht,
+und ermöglichen dennoch präzisere Aussagen für den Fall, dass Priori und Daten im Wesentlichen übereinstimmen,
+ohne die Einsatzmöglichkeiten in der statistischen Praxis durch
+eine zu hohe Komplexität in der Anwendung zu erschweren.
+Anwendungen in verschiedenen Bereichen, unter anderem in sogenannten
+common-cause-failure-Modellen und in der linearen Bayes-Regression,
+werden betrachtet / erforscht / untersucht***, 
+und das in dieser Dissertation entwickelte Modell wird mit anderen Intervallwahrscheinlichkeits-Modellen verglichen.
+
 
 %\selectlanguage{english}
